# purplepois0n

./: .cproject  .gitignore  .gitmodules  .project  LICENSE  Makefile  QUICKSTART.md  README.md  bootstrap.sh  build.sh
docs/: AGENT_API.md  ARCHITECTURE.md  ARCHIVES.md  BACKPORT_MATRIX.md  BOOGERAIDS.md  BOOTSTRAP_AND_PATCHING.md  DOCTOR.md  FINAL_STATUS.md  GENERATIONS.md  IMPLEMENTATION_ROADMAP.md  LINEAGE.md  MVP.md  README.md  STORE_ECOSYSTEM.md  SUPPORT.md  USE_AFTER_FREE_GUIDE.md
doctors/: doctor_gui.py
include/: AnthraxExploit.h  AnthraxPayload.h  AppleCvsDatabase.h  BootromExploit.h  Checkm8Exploit.h  CyanidePayload.h  DeviceState.h  DoctorReporter.h  DoctorWorkflow.h  EnvUtil.h  IpswPatchfinder.h  JailbreakPlanner.h  PhysicalMemoryDriver.h  PhysicalUAF.h  RamdiskDelivery.h  RamdiskTypes.h  Syringe.h  TssClient.h  Usbliter8Exploit.h  UseAfterFreeExploit.h  purplepois0n.h
legacy/: README.md  clone-modern-era.sh
scripts/: build-libtatsu.sh  submodules.sh
src/: AFCService.cpp  AFCService.h  AnalysisPayload.cpp  AnalysisPayload.h  AnthraxExploit.cpp  AnthraxPayload.cpp  AppleCvsDatabase.cpp  BackupProtocol.cpp  BackupProtocol.h  BootromExploit.cpp  Checkm8.cpp  Checkm8.h  Checkm8Exploit.cpp  CrashSlideHelper.cpp  CrashSlideHelper.h  CyanidePayload.cpp  DFUDevice.cpp  DFUDevice.h  DeviceManager.cpp  DeviceManager.h  DoctorReporter.cpp  DoctorWorkflow.cpp  EnvUtil.cpp  (+67 more)
ui/tui/: pyproject.toml
ui/tui/purplepois0n_tui/: __main__.py  api_client.py  app.py
ui/tui/purplepois0n_tui.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
(+292 files in other folders)
