[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "purplepois0n-tui"
version = "0.1.0"
description = "Terminal UI for purplepois0n"
requires-python = ">=3.10"
dependencies = [
  "rich>=13.0",
  "prompt-toolkit>=3.0",
  "httpx>=0.27",
]

[project.scripts]
purplepois0n-tui = "purplepois0n_tui.__main__:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["purplepois0n_tui*"]
